src/java/com/jvmbasic/grammar/JvmBasicParser.java
// Generated from JvmBasicParser.g4 by ANTLR 4.13.2
package com.jvmbasic.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JvmBasicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VAR=1, AS=2, INTEGER=3, LONG=4, FLOAT=5, DOUBLE=6, STRING=7, BOOLEAN=8, 
		BYTE=9, CHAR=10, OBJECT=11, BIGINTEGER=12, DECIMAL=13, NIL=14, NOTHING=15, 
		TRUE=16, FALSE=17, IF=18, THEN=19, ELSE=20, ELSEIF=21, END=22, FOR=23, 
		TO=24, STEP=25, NEXT=26, WHILE=27, DO=28, LOOP=29, UNTIL=30, SELECT=31, 
		CASE=32, EXIT=33, CONTINUE=34, RETURN=35, EACH=36, IN=37, FUNCTION=38, 
		SUB=39, BYREF=40, BYVAL=41, CLASS=42, INTERFACE=43, EXTENDS=44, IMPLEMENTS=45, 
		NEW=46, ME=47, THIS=48, MYBASE=49, SUPER=50, PUBLIC=51, PRIVATE=52, PROTECTED=53, 
		SHARED=54, STATIC=55, ABSTRACT=56, OVERRIDE=57, PROPERTY=58, GET=59, SET=60, 
		TRY=61, CATCH=62, FINALLY=63, THROW=64, ASSERT=65, IMPORT=66, ENUM=67, 
		CONST=68, TYPEOF=69, USING=70, ASYNC=71, AWAIT=72, LAMBDA=73, AND=74, 
		OR=75, XOR=76, NOT=77, MOD=78, PLUS=79, MINUS=80, STAR=81, SLASH=82, BACKSLASH=83, 
		CARET=84, EQ=85, NE=86, LT=87, GT=88, LE=89, GE=90, PLUS_EQ=91, MINUS_EQ=92, 
		STAR_EQ=93, SLASH_EQ=94, AMP=95, PIPE=96, TILDE=97, SHL=98, SHR=99, ARROW=100, 
		QUESTION=101, COLON=102, DOUBLE_COLON=103, LPAREN=104, RPAREN=105, LBRACKET=106, 
		RBRACKET=107, LBRACE=108, RBRACE=109, COMMA=110, DOT=111, SEMI=112, INTEGER_LITERAL=113, 
		LONG_LITERAL=114, FLOAT_LITERAL=115, DOUBLE_LITERAL=116, STRING_LITERAL=117, 
		INTERPOLATED_STRING=118, CHAR_LITERAL=119, IDENTIFIER=120, NEWLINE=121, 
		WS=122, LINE_CONTINUATION=123, LINE_COMMENT=124, LINE_COMMENT_SLASH=125, 
		BLOCK_COMMENT=126;
	public static final int
		RULE_compilationUnit = 0, RULE_topLevelElement = 1, RULE_importDeclaration = 2, 
		RULE_qualifiedName = 3, RULE_declaration = 4, RULE_classDeclaration = 5, 
		RULE_accessModifier = 6, RULE_typeParameters = 7, RULE_typeParameter = 8, 
		RULE_classMember = 9, RULE_fieldDeclaration = 10, RULE_propertyDeclaration = 11, 
		RULE_propertyAccessor = 12, RULE_constructorDeclaration = 13, RULE_methodDeclaration = 14, 
		RULE_abstractMethodDeclaration = 15, RULE_interfaceDeclaration = 16, RULE_interfaceMember = 17, 
		RULE_enumDeclaration = 18, RULE_enumMember = 19, RULE_functionDeclaration = 20, 
		RULE_subDeclaration = 21, RULE_constDeclaration = 22, RULE_parameterList = 23, 
		RULE_parameter = 24, RULE_typeName = 25, RULE_primitiveType = 26, RULE_typeNameList = 27, 
		RULE_typeArguments = 28, RULE_statement = 29, RULE_varStatement = 30, 
		RULE_assignmentStatement = 31, RULE_lvalue = 32, RULE_assignmentOp = 33, 
		RULE_ifStatement = 34, RULE_elseIfClause = 35, RULE_elseClause = 36, RULE_selectStatement = 37, 
		RULE_caseClause = 38, RULE_caseElseClause = 39, RULE_expressionList = 40, 
		RULE_forStatement = 41, RULE_forEachStatement = 42, RULE_whileStatement = 43, 
		RULE_doStatement = 44, RULE_tryStatement = 45, RULE_catchClause = 46, 
		RULE_finallyClause = 47, RULE_returnStatement = 48, RULE_exitStatement = 49, 
		RULE_continueStatement = 50, RULE_throwStatement = 51, RULE_assertStatement = 52, 
		RULE_usingStatement = 53, RULE_expressionStatement = 54, RULE_expression = 55, 
		RULE_conditionalOrExpression = 56, RULE_conditionalAndExpression = 57, 
		RULE_bitwiseOrExpression = 58, RULE_bitwiseXorExpression = 59, RULE_bitwiseAndExpression = 60, 
		RULE_equalityExpression = 61, RULE_relationalExpression = 62, RULE_shiftExpression = 63, 
		RULE_additiveExpression = 64, RULE_multiplicativeExpression = 65, RULE_powerExpression = 66, 
		RULE_unaryExpression = 67, RULE_postfixExpression = 68, RULE_postfixOp = 69, 
		RULE_memberName = 70, RULE_primaryExpression = 71, RULE_argumentList = 72, 
		RULE_argument = 73, RULE_literal = 74;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "topLevelElement", "importDeclaration", "qualifiedName", 
			"declaration", "classDeclaration", "accessModifier", "typeParameters", 
			"typeParameter", "classMember", "fieldDeclaration", "propertyDeclaration", 
			"propertyAccessor", "constructorDeclaration", "methodDeclaration", "abstractMethodDeclaration", 
			"interfaceDeclaration", "interfaceMember", "enumDeclaration", "enumMember", 
			"functionDeclaration", "subDeclaration", "constDeclaration", "parameterList", 
			"parameter", "typeName", "primitiveType", "typeNameList", "typeArguments", 
			"statement", "varStatement", "assignmentStatement", "lvalue", "assignmentOp", 
			"ifStatement", "elseIfClause", "elseClause", "selectStatement", "caseClause", 
			"caseElseClause", "expressionList", "forStatement", "forEachStatement", 
			"whileStatement", "doStatement", "tryStatement", "catchClause", "finallyClause", 
			"returnStatement", "exitStatement", "continueStatement", "throwStatement", 
			"assertStatement", "usingStatement", "expressionStatement", "expression", 
			"conditionalOrExpression", "conditionalAndExpression", "bitwiseOrExpression", 
			"bitwiseXorExpression", "bitwiseAndExpression", "equalityExpression", 
			"relationalExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression", 
			"powerExpression", "unaryExpression", "postfixExpression", "postfixOp", 
			"memberName", "primaryExpression", "argumentList", "argument", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", 
			"'\\'", "'^'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "'+='", "'-='", 
			"'*='", "'/='", "'&'", "'|'", "'~'", "'<<'", "'>>'", "'=>'", "'?'", "':'", 
			"'::'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "'.'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VAR", "AS", "INTEGER", "LONG", "FLOAT", "DOUBLE", "STRING", "BOOLEAN", 
			"BYTE", "CHAR", "OBJECT", "BIGINTEGER", "DECIMAL", "NIL", "NOTHING", 
			"TRUE", "FALSE", "IF", "THEN", "ELSE", "ELSEIF", "END", "FOR", "TO", 
			"STEP", "NEXT", "WHILE", "DO", "LOOP", "UNTIL", "SELECT", "CASE", "EXIT", 
			"CONTINUE", "RETURN", "EACH", "IN", "FUNCTION", "SUB", "BYREF", "BYVAL", 
			"CLASS", "INTERFACE", "EXTENDS", "IMPLEMENTS", "NEW", "ME", "THIS", "MYBASE", 
			"SUPER", "PUBLIC", "PRIVATE", "PROTECTED", "SHARED", "STATIC", "ABSTRACT", 
			"OVERRIDE", "PROPERTY", "GET", "SET", "TRY", "CATCH", "FINALLY", "THROW", 
			"ASSERT", "IMPORT", "ENUM", "CONST", "TYPEOF", "USING", "ASYNC", "AWAIT", 
			"LAMBDA", "AND", "OR", "XOR", "NOT", "MOD", "PLUS", "MINUS", "STAR", 
			"SLASH", "BACKSLASH", "CARET", "EQ", "NE", "LT", "GT", "LE", "GE", "PLUS_EQ", 
			"MINUS_EQ", "STAR_EQ", "SLASH_EQ", "AMP", "PIPE", "TILDE", "SHL", "SHR", 
			"ARROW", "QUESTION", "COLON", "DOUBLE_COLON", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "LBRACE", "RBRACE", "COMMA", "DOT", "SEMI", "INTEGER_LITERAL", 
			"LONG_LITERAL", "FLOAT_LITERAL", "DOUBLE_LITERAL", "STRING_LITERAL", 
			"INTERPOLATED_STRING", "CHAR_LITERAL", "IDENTIFIER", "NEWLINE", "WS", 
			"LINE_CONTINUATION", "LINE_COMMENT", "LINE_COMMENT_SLASH", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JvmBasicParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JvmBasicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JvmBasicParser.EOF, 0); }
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TopLevelElementContext> topLevelElement() {
			return getRuleContexts(TopLevelElementContext.class);
		}
		public TopLevelElementContext topLevelElement(int i) {
			return getRuleContext(TopLevelElementContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmBasicParserVisitor ) return ((JvmBasicParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(150);
				importDeclaration();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2395858714478768130L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 143553346224104315L) != 0)) {
				{
				{
				setState(156);
				topLevelElement();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(162);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelElementContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TopLevelElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).enterTopLevelElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).exitTopLevelElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmBasicParserVisitor ) return ((JvmBasicParserVisitor<? extends T>)visitor).visitTopLevelElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelElementContext topLevelElement() throws RecognitionException {
		TopLevelElementContext _localctx = new TopLevelElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelElement);
		try {
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
			case SUB:
			case CLASS:
			case INTERFACE:
			case PUBLIC:
			case PRIVATE:
			case PROTECTED:
			case ABSTRACT:
			case ENUM:
			case CONST:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				declaration();
				}
				break;
			case VAR:
			case BIGINTEGER:
			case DECIMAL:
			case NIL:
			case NOTHING:
			case TRUE:
			case FALSE:
			case IF:
			case FOR:
			case WHILE:
			case DO:
			case SELECT:
			case EXIT:
			case CONTINUE:
			case RETURN:
			case NEW:
			case ME:
			case THIS:
			case MYBASE:
			case SUPER:
			case TRY:
			case THROW:
			case ASSERT:
			case TYPEOF:
			case USING:
			case AWAIT:
			case LAMBDA:
			case NOT:
			case PLUS:
			case MINUS:
			case TILDE:
			case LPAREN:
			case INTEGER_LITERAL:
			case LONG_LITERAL:
			case FLOAT_LITERAL:
			case DOUBLE_LITERAL:
			case STRING_LITERAL:
			case INTERPOLATED_STRING:
			case CHAR_LITERAL:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(JvmBasicParser.IMPORT, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(JvmBasicParser.DOT, 0); }
		public TerminalNode STAR() { return getToken(JvmBasicParser.STAR, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmBasicParserVisitor ) return ((JvmBasicParserVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(IMPORT);
			setState(169);
			qualifiedName();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(170);
				match(DOT);
				setState(171);
				match(STAR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedNameContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(JvmBasicParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(JvmBasicParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(JvmBasicParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(JvmBasicParser.DOT, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).exitQualifiedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmBasicParserVisitor ) return ((JvmBasicParserVisitor<? extends T>)visitor).visitQualifiedName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_qualifiedName);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(IDENTIFIER);
			setState(179);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(175);
					match(DOT);
					setState(176);
					match(IDENTIFIER);
					}
					} 
				}
				setState(181);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public SubDeclarationContext subDeclaration() {
			return getRuleContext(SubDeclarationContext.class,0);
		}
		public ConstDeclarationContext constDeclaration() {
			return getRuleContext(ConstDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JvmBasicParserListener ) ((JvmBasicParserListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmBasicParserVisitor ) return ((JvmBasicParserVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
